force-app/main/default/objects/Activity__c/fields/ActivityGroupId__c.field-meta.xml
<CustomField>
    <fullName>ActivityGroupId__c</fullName>
    <label>Activity Group</label>
    <referenceTo>ActivityGroup__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>