force-app/main/default/objects/Activity__c/fields/AdjustedDuration__c.field-meta.xml
<CustomField>
    <fullName>AdjustedDuration__c</fullName>
    <label>Adjusted Duration</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>