force-app/main/default/objects/Activity__c/fields/IsNotApplicable__c.field-meta.xml
<CustomField>
    <fullName>IsNotApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Applicable</label>
    <type>Checkbox</type>
</CustomField>