force-app/main/default/objects/Activity__c/fields/SummaryId__c.field-meta.xml
<CustomField>
    <fullName>SummaryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Summary</label>
    <referenceTo>TaskSummary__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>